Mark v2/ColumnCombiner package as deprecated
We are not using this API as of the React rewrite